Fixes Table Hidden Behind Data Import

--- a/packages/editor/src/scss/data-import.scss
+++ b/packages/editor/src/scss/data-import.scss
@@ -183,7 +183,7 @@
         position: relative;
         background-color: $lightest-gray;
         padding: $gbl-padding;
-        width: 50%;
+        width: 50% !important;
         @import "data-table";
     }
 }
